--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
     "@testing-library/user-event": "^13.5.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
@@ -12,6 +13,7 @@
     "bootstrap": "^5.3.3",
     "concurrent": "^0.3.2",
     "concurrently": "^8.2.2",
+    "config": "^3.3.11",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -50,5 +52,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
