--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 EMAIL=myyard789@gmail.com
 EMAIL_PASSWORD=cmvankwrmhydhjkm
 REACT_APP_API_URL=http://localhost:5000
+MONGO_URI=mongodb://127.0.0.1:27017/task2
