--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 EMAIL=myyard789@gmail.com
 EMAIL_PASSWORD=cmvankwrmhydhjkm
-REACT_APP_API_URL=https://faizbook-3.onrender.com
+REACT_APP_API_URL=https://faizbook-3.onrender.com/
 MONGO_URI=mongodb://127.0.0.1:27017/task2
